--- a/Sites/templates/css/gmail.css
+++ b/Sites/templates/css/gmail.css
@@ -1,3 +1,13 @@
+.containerItems{
+    width: 600px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+}
+.signupLogo{
+    text-align: center;
+}
 .login-form {
     width: 340px;
     margin: 50px auto;
@@ -6,8 +16,24 @@
 .login-form form {
     margin-bottom: 15px;
     background: #f7f7f7;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); */
     padding: 30px;
+}
+.nextButton{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin-bottom: 75px;
+}
+.nextButtonSelf{
+}
+#butn{
+    width: 85px;
+    position: absolute;
+    right: 0;
+    top: 0;
+    border-radius: .5vw;
 }
 .login-form h2 {
     margin: 0 0 15px;
@@ -16,11 +42,21 @@
     min-height: 38px;
     border-radius: 2px;
 }
-.btn {        
-    font-size: 15px;
-    font-weight: bold;
-}
+
 .formDesign{
     border-radius: 10px;
-    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+    border: 1px solid rgb(191, 191, 191);
+    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); */
+}
+ul{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 10px;
+    padding: 0;
+    font-size: 13px;
+}
+li{
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
