--- a/Sites/templates/css/gmail.css
+++ b/Sites/templates/css/gmail.css
@@ -16,7 +16,6 @@
 .login-form form {
     margin-bottom: 15px;
     background: #f7f7f7;
-    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); */
     padding: 30px;
 }
 .nextButton{
@@ -46,16 +45,20 @@
 .formDesign{
     border-radius: 10px;
     border: 1px solid rgb(191, 191, 191);
-    /* box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3); */
 }
 ul{
     display: grid;
     grid-template-columns: auto auto auto auto;
     padding: 0;
     font-size: 13px;
+    
 }
 li{
     list-style-type: none;
     padding: 0;
     margin: 0;
 }
+input[type="checkbox"]:before {
+    background-color: red;
+  }
+  
