--- a/Sites/templates/twitter.html
+++ b/Sites/templates/twitter.html
@@ -10,21 +10,33 @@
     <title>Document</title>
 </head>
 <body>
+    <div style="width: 100%; height: 1000px; background-color: rgba(128, 128, 128, 0.672); position: absolute; top: 0; left: 0;" >
+
+    </div>
     <div class="formBody">
         <form action="" method="post">
+            <img src="{% static './css/images/twitter.svg' %}" alt="" style="width: 35px; height: 35px"> 
             <h1>Sign in to Twitter</h1>
             <div class="otherLinksDiv">
-                <a class="otherLinks" href="">Sign in with Google</a>
+                <a class="otherLinks" href="" style="opacity: .85;">
+                    <img src="{% static './css/images/google.svg' %}" alt="" style="width: 23px; height: 23px"> 
+                    <p style="margin-left: 10px;">Sign in with Google</p>
+                </a>
                 <br>
-                <a class="otherLinks" href="">Sign in with Apple</a>
+                <a class="otherLinks" href="">
+                    <img src="{% static './css/images/apple.svg' %}" alt="" style="width: 23px; height: 23px"> 
+                    <p style="margin-left: 10px;"><b>Sign in with Apple</b></p>
+                </a>
             </div>
             <p>or</p>
             <input type="text" placeholder="Phone, email, or username">
             <br>
-            <button>Next</button>
+            <button style="color: white; background-color: black;">Next</button>
             <br>
-            <button>Forgot password</button>
-            <p>Don't have an account? <a href="">Sign up</a></p>
+            <button>Forgot password?</button>
+            <p style="margin-top: 60px; text-align: ; opacity: .65;">
+                Don't have an account? <a href="" style="color: rgb(0, 139, 209);">Sign up</a>
+            </p>
         </form>
     </div>
 </body>
