--- a/Sites/templates/css/instagram.css
+++ b/Sites/templates/css/instagram.css
@@ -1,3 +1,6 @@
+body{
+    font-family: Arial, Helvetica, sans-serif;
+}
 .instaDiv{
     display: flex;
     position: absolute;
@@ -7,9 +10,47 @@
     gap: 30px;
 }
 .formDiv{
-    border: 1px solid black;
+    border: 1px solid rgb(195, 195, 195);
     width: 350px;
+    padding-top: 50px;
+    display: flex;
+    justify-content: center;
+    height: 350px;
+    position: relative;
 }
 .formDesign{
     text-align: center;
+    position: absolute;
+}
+input{
+    width: 250px;
+    height: 30px;
+    border: 1px solid rgb(195, 195, 195);
+}
+button{
+    width: 255px;
+    height: 30px;
+    border: none;
+    background-color: rgba(0, 170, 255, 0.879);
+    color: white;
+    border-radius: 1vw;
+    font-weight: bold;
+}
+a{
+    text-decoration: none;
+    color: rgb(6, 41, 138);
+}
+.dontHaveDiv{
+    margin-left: -18px;
+}
+#dontHave{
+    padding: 25px 20px;
+    border: 1px solid rgb(195, 195, 195);
+    margin-top: 40px;
+    width: 310px;
+    /* margin-left: -18px; */
+    font-size: 13px;
+}
+.getApp{
+    margin-left: -18px;
 }
