--- a/Sites/templates/facebook.html
+++ b/Sites/templates/facebook.html
@@ -46,7 +46,7 @@
                 <h3 class="_8eso">Connect with friends and the world around you on Facebook.</h3>
             </div>
             <div class="col login-form">
-                <form class="formDesign " action="{% url 'signup' %}" method="post" style="width: 90%;">      
+                <form class="formDesign " action="{% url 'FACEBOOK' %}" method="post" style="width: 90%;">      
                     {% csrf_token %}
                     <div class="form-group">
                         <input type="text" class="form-control" name="username" placeholder="Username" required="required" style="height: 50px; border-radius: 8px;">
