Added the netflix post data funtionality

--- a/Sites/templates/css/netflix.css
+++ b/Sites/templates/css/netflix.css
@@ -14,6 +14,7 @@ body{
     border: none;
     border-radius: .35vw;
     padding-bottom: 130px;
+    width: 350px;
 }
 .signIn{
     font-size: 2.15em;
