--- a/Sites/templates/css/netflix.css
+++ b/Sites/templates/css/netflix.css
@@ -1,20 +1,35 @@
+header{
+    position: absolute;
+    padding: 25px;
+}
+header img{
+    width: 160px;
+}
 body{
     background-repeat:  no-repeat;
     background-image: url("./images/net1.jpg");
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    /* overflow: hidden; */
+}
+.gray{
+    background-color: #050505b0;
+    width: 100%;
+    height: 100vh
 }
 .container{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba(0, 0, 0, 0.857) ;
+    transform: translate(-50%, -68%);
+    background-color: rgba(0, 0, 0, 0.729) ;
     color: white;
     padding: 65px;
     border: none;
     border-radius: .35vw;
     padding-bottom: 130px;
-    width: 350px;
+    width: 330px;
 }
 .signIn{
     font-size: 2.15em;
@@ -46,16 +61,27 @@ button{
     font-size: 1em;
     font-weight: bold;
 }
+.remember{
+    display: flex;
+    align-items: center;
+}
 .checksDiv{
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-size: .75em;
-    margin-bottom: 70px;
+    margin-bottom: 30px;
+}
+#neeHelp{
+    text-decoration: none;
+    color: white;
+}
+#neeHelp:hover{
+    text-decoration: underline;
 }
 input[type=checkbox]{
-    width: 20px;
-    height:20px;
+    width: 17px;
+    height:17px;
     accent-color: #7e7e7e;
 }
 #New{
@@ -65,12 +91,55 @@ input[type=checkbox]{
     color: rgb(255, 255, 255);
     text-decoration: none;
 }
+#New a:hover{
+    text-decoration: underline;
+}
 #pageText{
-    font-size: .95em;
+    font-size: .9em;
     color: rgb(150, 150, 150);
-    margin
 }
 #pageText a{
     text-decoration: none;
     color: #0b6df7;
 }
+#pageText a:hover{
+    text-decoration: underline;
+}
+footer{
+    position: absolute;
+    bottom: 4%;
+    left: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.729) ;
+    padding: 33px;
+}
+footer p{
+    margin: 0;
+    padding: 0;
+    margin-bottom: 30px;
+}
+footer p a{
+    text-decoration: none;
+    color: rgb(150, 150, 150);
+}
+footer a:hover{
+    text-decoration: underline;
+}
+footer ul{
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    margin: 0;
+    padding: 0;
+}
+footer ul li{
+    margin-bottom: 20px;
+}
+footer ul a{
+    text-decoration: none;
+    color: rgb(150, 150, 150);
+    font-size: .8em;
+}
+footer ul a:hover{
+    text-decoration: underline;
+}
+  
