--- a/Sites/templates/css/netflix.css
+++ b/Sites/templates/css/netflix.css
@@ -11,7 +11,8 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    /* overflow: hidden; */
+    width: 100%;
+    overflow: hidden;
 }
 .gray{
     background-color: #050505b0;
@@ -141,5 +142,47 @@ footer ul a{
 }
 footer ul a:hover{
     text-decoration: underline;
+}
+@media screen and (max-width:600px) {
+    header img{
+        width: 80px;
+        z-index: 10;
+    }
+    body{
+        background-image: none;
+        background-color: black;
+    }
+    .container{
+        top: 45%;
+        left: 53%;
+        background-color: transparent;
+        padding-top: 0 ;
+        padding-left: 0;
+        width: 430px;
+    }
+    input:not(#check){
+        width: 430px;
+    }
+    button{
+        width: 463px;
+    }
+    .gray{
+        background-color: black;
+    }
+    footer{
+        height: 200px;
+        border-top: 1px solid rgb(150, 150, 150); 
+    }
+    footer p{
+        /* margin-bottom: 20px; */
+    }
+    footer ul{
+        column-count: 2;
+        display: block;
+        bottom: 4%;
+        left: 0;
+        width: 100%;
+        background-color: none ;
+    }
 }
   
